src/main/java/com/example/recruit_page_wwy/_core/error/ex/ExceptionApi401.java
package com.example.recruit_page_wwy._core.error.ex;

public class ExceptionApi401 extends RuntimeException {
    public ExceptionApi401(String message) {
        super(message);
    }
}
